Updated Tutorial Notebooks

--- a/debug.ipynb
+++ b/debug.ipynb
@@ -40,7 +40,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 256.61it/s]"
+      "100%|██████████| 100/100 [00:00<00:00, 262.24it/s]"
      ]
     },
     {
@@ -114,19 +114,19 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/Users/domenicbersch/Documents/Repositories/NEST/nest/model_cards/fmri_nsd_fwrf.yaml'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnest\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m NEST\n\u001b[1;32m      3\u001b[0m nest \u001b[38;5;241m=\u001b[39m NEST(nest_dir\u001b[38;5;241m=\u001b[39mnest_dir)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# List all available models and their versions\u001b[39;00m\n",
-      "File \u001b[0;32m~/Documents/Repositories/NEST/nest/__init__.py:2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnest\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnest\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m NEST\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnest\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnest\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_version\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m __version__\n",
-      "File \u001b[0;32m~/Documents/Repositories/NEST/nest/models/__init__.py:2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# This imports will trigger model registration\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnest\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfmri\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnest\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01meeg\u001b[39;00m\n",
-      "File \u001b[0;32m~/Documents/Repositories/NEST/nest/models/fmri/__init__.py:2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Import models to register them\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnest\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfmri\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnsd_fwrf\u001b[39;00m\n",
-      "File \u001b[0;32m~/Documents/Repositories/NEST/nest/models/fmri/nsd_fwrf.py:17\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnest\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfmri\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfwrf\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtorch_joint_training_unpacked_sequences\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m# Load model_info once at the top\u001b[39;00m\n\u001b[0;32m---> 17\u001b[0m model_info \u001b[38;5;241m=\u001b[39m \u001b[43mload_model_info\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m# Register this model with the registry using model_info\u001b[39;00m\n\u001b[1;32m     20\u001b[0m register_model(\n\u001b[1;32m     21\u001b[0m     model_id\u001b[38;5;241m=\u001b[39mmodel_info[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel_id\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[1;32m     22\u001b[0m     module_path\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnest.models.fmri.nsd_fwrf\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     26\u001b[0m     yaml_path\u001b[38;5;241m=\u001b[39mos\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mdirname(\u001b[38;5;18m__file__\u001b[39m), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m..\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel_cards\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfmri_nsd_fwrf.yaml\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     27\u001b[0m )\n",
-      "File \u001b[0;32m~/Documents/Repositories/NEST/nest/core/model_registry.py:82\u001b[0m, in \u001b[0;36mload_model_info\u001b[0;34m()\u001b[0m\n\u001b[1;32m     80\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload_model_info\u001b[39m():\n\u001b[1;32m     81\u001b[0m     yaml_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mdirname(\u001b[38;5;18m__file__\u001b[39m), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m..\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel_cards\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfmri_nsd_fwrf.yaml\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 82\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpath\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mabspath\u001b[49m\u001b[43m(\u001b[49m\u001b[43myaml_path\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m     83\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m yaml\u001b[38;5;241m.\u001b[39msafe_load(f)\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/domenicbersch/Documents/Repositories/NEST/nest/model_cards/fmri_nsd_fwrf.yaml'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Available models: ['fmri_nsd_fwrf', 'eeg_things_eeg_2_vit_b_32']\n",
+      "Available Modalities and Datasets:\n",
+      "=================================\n",
+      "• EEG\n",
+      "  └─ things_eeg_2\n",
+      "\n",
+      "• FMRI\n",
+      "  └─ NSD\n",
+      "\n",
+      "Model Catalog as Dict:: {'fmri': ['NSD'], 'eeg': ['things_eeg_2']}\n"
      ]
     }
    ],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -161,8 +161,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Encoding fMRI responses: 100%|██████████| 1/1 [00:00<00:00,  1.22it/s, Encoded images=100, Total images=100]\n",
-      "Encoding EEG responses: 100%|██████████| 1/1 [00:01<00:00,  1.96s/it, Encoded images=100, Total images=100]\n"
+      "Encoding fMRI responses: 100%|██████████| 1/1 [00:01<00:00,  1.02s/it, Encoded images=100, Total images=100]\n",
+      "Encoding EEG responses: 100%|██████████| 1/1 [00:01<00:00,  1.99s/it, Encoded images=100, Total images=100]\n"
      ]
     }
    ],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
       "Dataset: NSD\n",
       "Features: feature-weighted receptive fields (fwrf)\n",
       "Repeats: single\n",
-      "Subject level: True\n",
+      "Subject specific: True\n",
       "\n",
       "📋 Description:\n",
       "This model generates in silico fMRI responses to visual stimuli using feature-\n",
@@ -242,7 +242,9 @@
       "(NSD), a large-scale 7T fMRI dataset of subjects viewing natural images. The\n",
       "model extracts visual features using a convolutional neural network and maps\n",
       "these features to brain activity  patterns across multiple visual regions of\n",
-      "interest (ROIs).\n",
+      "interest (ROIs).  The model takes as input a batch of RGB images in the shape\n",
+      "[batch_size, 3, height, width], with pixel values ranging from 0 to 255 and\n",
+      "square dimensions (e.g., 224×224).\n",
       "\n",
       "📥 Input:\n",
       "  Type: numpy.ndarray\n",
@@ -355,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +391,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Encoding fMRI responses: 100%|██████████| 1/1 [00:00<00:00,  1.28it/s, Encoded images=100, Total images=100]\n"
+      "Encoding fMRI responses: 100%|██████████| 1/1 [00:00<00:00,  1.27it/s, Encoded images=100, Total images=100]\n"
      ]
     },
     {
@@ -422,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +438,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Encoding fMRI responses: 100%|██████████| 1/1 [00:00<00:00,  1.27it/s, Encoded images=100, Total images=100]\n"
+      "Encoding fMRI responses: 100%|██████████| 1/1 [00:00<00:00,  1.26it/s, Encoded images=100, Total images=100]\n"
      ]
     },
     {
@@ -644,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -875,14 +877,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Encoding EEG responses: 100%|██████████| 1/1 [00:01<00:00,  1.70s/it, Encoded images=100, Total images=100]\n"
+      "Encoding EEG responses: 100%|██████████| 1/1 [00:01<00:00,  1.81s/it, Encoded images=100, Total images=100]\n"
      ]
     },
     {
@@ -5037,7 +5039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -5052,7 +5054,7 @@
       "Dataset: things_eeg_2\n",
       "Features: vision transformer (ViT-B/32)\n",
       "Repeats: multi\n",
-      "Subject level: True\n",
+      "Subject specific: True\n",
       "\n",
       "📋 Description:\n",
       "This model generates in silico EEG responses to visual stimuli using a vision\n",
@@ -5060,8 +5062,9 @@
       "EEG recordings from subjects viewing images of everyday objects. The model\n",
       "extracts visual features using a pre-trained ViT-B/32 transformer, applies\n",
       "dimensionality reduction, and then predicts EEG responses across all channels\n",
-      "and time points. Multiple repetitions are modeled to capture trial-to-trial\n",
-      "variability.\n",
+      "and time points.  The model takes as input a batch of RGB images in the shape\n",
+      "[batch_size, 3, height, width], with pixel values ranging from 0 to 255 and\n",
+      "square dimensions (e.g., 224×224).\n",
       "\n",
       "📥 Input:\n",
       "  Type: numpy.ndarray\n",
@@ -5114,6 +5117,9 @@
       "\n",
       "  Performance plots at: neural_encoding_simulation_toolkit/encoding_models/modality-eeg/train_dataset-things_eeg_2/model-vit_b_32/encoding_models_accuracy\n",
       "\n",
+      "📚 References:\n",
+      "    • x\n",
+      "\n",
       "📦 Example Usage:\n",
       "\n",
       "from nest import NEST\n",
@@ -5137,8 +5143,8 @@
        "  'dataset': 'things_eeg_2',\n",
        "  'features': 'vision transformer (ViT-B/32)',\n",
        "  'repeats': 'multi',\n",
-       "  'subject_level': True},\n",
-       " 'description': 'This model generates in silico EEG responses to visual stimuli using a vision transformer model.\\nIt was trained on the THINGS-EEG-2 dataset, which contains EEG recordings from subjects viewing\\nimages of everyday objects. The model extracts visual features using a pre-trained ViT-B/32\\ntransformer, applies dimensionality reduction, and then predicts EEG responses across all channels\\nand time points. Multiple repetitions are modeled to capture trial-to-trial variability.\\n',\n",
+       "  'subject_specific': True},\n",
+       " 'description': 'This model generates in silico EEG responses to visual stimuli using a vision transformer model.\\nIt was trained on the THINGS-EEG-2 dataset, which contains EEG recordings from subjects viewing\\nimages of everyday objects. The model extracts visual features using a pre-trained ViT-B/32\\ntransformer, applies dimensionality reduction, and then predicts EEG responses across all channels\\nand time points.\\n\\nThe model takes as input a batch of RGB images in the shape [batch_size, 3, height, width], with pixel values ranging from 0 to 255 and square dimensions (e.g., 224×224).\\n',\n",
        " 'input': {'type': 'numpy.ndarray',\n",
        "  'shape': ['batch_size', 3, 'height', 'width'],\n",
        "  'description': 'The input should be a batch of RGB images.',\n",
@@ -5216,8 +5222,7 @@
        "    'example': True,\n",
        "    'description': 'Whether to show a progress bar during encoding (for large batches)',\n",
        "    'function': 'encode'}}},\n",
-       " 'performance': {'accuracy_plots': ['neural_encoding_simulation_toolkit/encoding_models/modality-eeg/train_dataset-things_eeg_2/model-vit_b_32/encoding_models_accuracy'],\n",
-       "  'references': ['x']},\n",
+       " 'performance': {'accuracy_plots': ['neural_encoding_simulation_toolkit/encoding_models/modality-eeg/train_dataset-things_eeg_2/model-vit_b_32/encoding_models_accuracy']},\n",
        " 'example_usage': 'from nest import NEST\\n\\nnest = NEST(\"/path/to/nest_dir\")\\n\\n# Initialize the model\\nmodel = nest.get_encoding_model(\"eeg_things_eeg_2_vit_b_32\", subject=1, nest_dir=\\'./\\')\\n\\n# Generate responses (assuming stimulus is a numpy array)\\nresponses = model.generate_response(stimulus)'}"
       ]
      },
@@ -5232,7 +5237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -5247,7 +5252,7 @@
       "Dataset: things_eeg_2\n",
       "Features: vision transformer (ViT-B/32)\n",
       "Repeats: multi\n",
-      "Subject level: True\n",
+      "Subject specific: True\n",
       "\n",
       "📋 Description:\n",
       "This model generates in silico EEG responses to visual stimuli using a vision\n",
@@ -5255,8 +5260,9 @@
       "EEG recordings from subjects viewing images of everyday objects. The model\n",
       "extracts visual features using a pre-trained ViT-B/32 transformer, applies\n",
       "dimensionality reduction, and then predicts EEG responses across all channels\n",
-      "and time points. Multiple repetitions are modeled to capture trial-to-trial\n",
-      "variability.\n",
+      "and time points.  The model takes as input a batch of RGB images in the shape\n",
+      "[batch_size, 3, height, width], with pixel values ranging from 0 to 255 and\n",
+      "square dimensions (e.g., 224×224).\n",
       "\n",
       "📥 Input:\n",
       "  Type: numpy.ndarray\n",
@@ -5309,6 +5315,9 @@
       "\n",
       "  Performance plots at: neural_encoding_simulation_toolkit/encoding_models/modality-eeg/train_dataset-things_eeg_2/model-vit_b_32/encoding_models_accuracy\n",
       "\n",
+      "📚 References:\n",
+      "    • x\n",
+      "\n",
       "📦 Example Usage:\n",
       "\n",
       "from nest import NEST\n",
@@ -5332,8 +5341,8 @@
        "  'dataset': 'things_eeg_2',\n",
        "  'features': 'vision transformer (ViT-B/32)',\n",
        "  'repeats': 'multi',\n",
-       "  'subject_level': True},\n",
-       " 'description': 'This model generates in silico EEG responses to visual stimuli using a vision transformer model.\\nIt was trained on the THINGS-EEG-2 dataset, which contains EEG recordings from subjects viewing\\nimages of everyday objects. The model extracts visual features using a pre-trained ViT-B/32\\ntransformer, applies dimensionality reduction, and then predicts EEG responses across all channels\\nand time points. Multiple repetitions are modeled to capture trial-to-trial variability.\\n',\n",
+       "  'subject_specific': True},\n",
+       " 'description': 'This model generates in silico EEG responses to visual stimuli using a vision transformer model.\\nIt was trained on the THINGS-EEG-2 dataset, which contains EEG recordings from subjects viewing\\nimages of everyday objects. The model extracts visual features using a pre-trained ViT-B/32\\ntransformer, applies dimensionality reduction, and then predicts EEG responses across all channels\\nand time points.\\n\\nThe model takes as input a batch of RGB images in the shape [batch_size, 3, height, width], with pixel values ranging from 0 to 255 and square dimensions (e.g., 224×224).\\n',\n",
        " 'input': {'type': 'numpy.ndarray',\n",
        "  'shape': ['batch_size', 3, 'height', 'width'],\n",
        "  'description': 'The input should be a batch of RGB images.',\n",
@@ -5411,8 +5420,7 @@
        "    'example': True,\n",
        "    'description': 'Whether to show a progress bar during encoding (for large batches)',\n",
        "    'function': 'encode'}}},\n",
-       " 'performance': {'accuracy_plots': ['neural_encoding_simulation_toolkit/encoding_models/modality-eeg/train_dataset-things_eeg_2/model-vit_b_32/encoding_models_accuracy'],\n",
-       "  'references': ['x']},\n",
+       " 'performance': {'accuracy_plots': ['neural_encoding_simulation_toolkit/encoding_models/modality-eeg/train_dataset-things_eeg_2/model-vit_b_32/encoding_models_accuracy']},\n",
        " 'example_usage': 'from nest import NEST\\n\\nnest = NEST(\"/path/to/nest_dir\")\\n\\n# Initialize the model\\nmodel = nest.get_encoding_model(\"eeg_things_eeg_2_vit_b_32\", subject=1, nest_dir=\\'./\\')\\n\\n# Generate responses (assuming stimulus is a numpy array)\\nresponses = model.generate_response(stimulus)'}"
       ]
      },
