Changed Model Cards and Documentation

--- a/debug.ipynb
+++ b/debug.ipynb
@@ -40,7 +40,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 262.24it/s]"
+      "100%|██████████| 100/100 [00:00<00:00, 267.24it/s]"
      ]
     },
     {
@@ -124,9 +124,9 @@
       "  └─ things_eeg_2\n",
       "\n",
       "• FMRI\n",
-      "  └─ NSD\n",
+      "  └─ nsd\n",
       "\n",
-      "Model Catalog as Dict:: {'fmri': ['NSD'], 'eeg': ['things_eeg_2']}\n"
+      "Model Catalog as Dict:: {'fmri': ['nsd'], 'eeg': ['things_eeg_2']}\n"
      ]
     }
    ],
@@ -161,8 +161,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Encoding fMRI responses: 100%|██████████| 1/1 [00:01<00:00,  1.02s/it, Encoded images=100, Total images=100]\n",
-      "Encoding EEG responses: 100%|██████████| 1/1 [00:01<00:00,  1.99s/it, Encoded images=100, Total images=100]\n"
+      "Encoding fMRI responses: 100%|██████████| 1/1 [00:00<00:00,  1.21it/s, Encoded images=100, Total images=100]\n",
+      "Encoding EEG responses: 100%|██████████| 1/1 [00:01<00:00,  1.83s/it, Encoded images=100, Total images=100]\n"
      ]
     }
    ],
@@ -231,10 +231,9 @@
       "================================================================================\n",
       "\n",
       "Modality: fmri\n",
-      "Dataset: NSD\n",
-      "Features: feature-weighted receptive fields (fwrf)\n",
-      "Repeats: single\n",
-      "Subject specific: True\n",
+      "Training dataset: NSD\n",
+      "Model architecture: feature-weighted receptive fields (fwrf)\n",
+      "Creator: Alessandro Gifford\n",
       "\n",
       "📋 Description:\n",
       "This model generates in silico fMRI responses to visual stimuli using feature-\n",
@@ -391,7 +390,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Encoding fMRI responses: 100%|██████████| 1/1 [00:00<00:00,  1.27it/s, Encoded images=100, Total images=100]\n"
+      "Encoding fMRI responses: 100%|██████████| 1/1 [00:00<00:00,  1.34it/s, Encoded images=100, Total images=100]\n"
      ]
     },
     {
@@ -438,7 +437,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Encoding fMRI responses: 100%|██████████| 1/1 [00:00<00:00,  1.26it/s, Encoded images=100, Total images=100]\n"
+      "Encoding fMRI responses: 100%|██████████| 1/1 [00:00<00:00,  1.28it/s, Encoded images=100, Total images=100]\n"
      ]
     },
     {
@@ -884,7 +883,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Encoding EEG responses: 100%|██████████| 1/1 [00:01<00:00,  1.81s/it, Encoded images=100, Total images=100]\n"
+      "Encoding EEG responses: 100%|██████████| 1/1 [00:01<00:00,  1.78s/it, Encoded images=100, Total images=100]\n"
      ]
     },
     {
@@ -5051,10 +5050,9 @@
       "================================================================================\n",
       "\n",
       "Modality: eeg\n",
-      "Dataset: things_eeg_2\n",
-      "Features: vision transformer (ViT-B/32)\n",
-      "Repeats: multi\n",
-      "Subject specific: True\n",
+      "Training dataset: things_eeg_2\n",
+      "Model architecture: vision transformer (ViT-B/32)\n",
+      "Creator: Alessandro Gifford\n",
       "\n",
       "📋 Description:\n",
       "This model generates in silico EEG responses to visual stimuli using a vision\n",
@@ -5082,7 +5080,7 @@
       "  Dimensions:\n",
       "    • batch_size: Number of stimuli in the batch\n",
       "    • n_repetitions: Number of simulated repetitions of the same stimulus (typically 4)\n",
-      "    • n_channels: Number of EEG channels (typically 64)\n",
+      "    • n_channels: Number of EEG channels (typically 63)\n",
       "    • n_timepoints: Number of time points in the EEG epoch (typically 140)\n",
       "\n",
       "📌 Parameters for encode():\n",
@@ -5105,8 +5103,8 @@
       "📌 Parameters for get_encoding_model():\n",
       "\n",
       "• subject (int, required)\n",
-      "  ↳ Subject ID from the THINGS-EEG-2 dataset (1-4)\n",
-      "  ↳ Valid values: [1, 2, 3, 4]\n",
+      "  ↳ Subject ID from the THINGS-EEG-2 dataset (1-10)\n",
+      "  ↳ Valid values: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
       "  ↳ Example: 1\n",
       "\n",
       "• nest_dir (str, optional)\n",
@@ -5140,10 +5138,9 @@
       "text/plain": [
        "{'model_id': 'eeg_things_eeg_2_vit_b_32',\n",
        " 'model_info': {'modality': 'eeg',\n",
-       "  'dataset': 'things_eeg_2',\n",
-       "  'features': 'vision transformer (ViT-B/32)',\n",
-       "  'repeats': 'multi',\n",
-       "  'subject_specific': True},\n",
+       "  'training_dataset': 'things_eeg_2',\n",
+       "  'model_architecture': 'vision transformer (ViT-B/32)',\n",
+       "  'creator': 'Alessandro Gifford'},\n",
        " 'description': 'This model generates in silico EEG responses to visual stimuli using a vision transformer model.\\nIt was trained on the THINGS-EEG-2 dataset, which contains EEG recordings from subjects viewing\\nimages of everyday objects. The model extracts visual features using a pre-trained ViT-B/32\\ntransformer, applies dimensionality reduction, and then predicts EEG responses across all channels\\nand time points.\\n\\nThe model takes as input a batch of RGB images in the shape [batch_size, 3, height, width], with pixel values ranging from 0 to 255 and square dimensions (e.g., 224×224).\\n',\n",
        " 'input': {'type': 'numpy.ndarray',\n",
        "  'shape': ['batch_size', 3, 'height', 'width'],\n",
@@ -5159,14 +5156,14 @@
        "   {'name': 'n_repetitions',\n",
        "    'description': 'Number of simulated repetitions of the same stimulus (typically 4)'},\n",
        "   {'name': 'n_channels',\n",
-       "    'description': 'Number of EEG channels (typically 64)'},\n",
+       "    'description': 'Number of EEG channels (typically 63)'},\n",
        "   {'name': 'n_timepoints',\n",
        "    'description': 'Number of time points in the EEG epoch (typically 140)'}]},\n",
        " 'parameters': {'subject': {'type': 'int',\n",
        "   'required': True,\n",
-       "   'valid_values': [1, 2, 3, 4],\n",
+       "   'valid_values': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10],\n",
        "   'example': 1,\n",
-       "   'description': 'Subject ID from the THINGS-EEG-2 dataset (1-4)',\n",
+       "   'description': 'Subject ID from the THINGS-EEG-2 dataset (1-10)',\n",
        "   'function': 'get_encoding_model'},\n",
        "  'nest_dir': {'type': 'str',\n",
        "   'required': False,\n",
@@ -5194,9 +5191,9 @@
        "   'function': 'encode'}},\n",
        " 'parameters_by_function': {'get_encoding_model': {'subject': {'type': 'int',\n",
        "    'required': True,\n",
-       "    'valid_values': [1, 2, 3, 4],\n",
+       "    'valid_values': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10],\n",
        "    'example': 1,\n",
-       "    'description': 'Subject ID from the THINGS-EEG-2 dataset (1-4)',\n",
+       "    'description': 'Subject ID from the THINGS-EEG-2 dataset (1-10)',\n",
        "    'function': 'get_encoding_model'},\n",
        "   'nest_dir': {'type': 'str',\n",
        "    'required': False,\n",
@@ -5249,10 +5246,9 @@
       "================================================================================\n",
       "\n",
       "Modality: eeg\n",
-      "Dataset: things_eeg_2\n",
-      "Features: vision transformer (ViT-B/32)\n",
-      "Repeats: multi\n",
-      "Subject specific: True\n",
+      "Training dataset: things_eeg_2\n",
+      "Model architecture: vision transformer (ViT-B/32)\n",
+      "Creator: Alessandro Gifford\n",
       "\n",
       "📋 Description:\n",
       "This model generates in silico EEG responses to visual stimuli using a vision\n",
@@ -5280,7 +5276,7 @@
       "  Dimensions:\n",
       "    • batch_size: Number of stimuli in the batch\n",
       "    • n_repetitions: Number of simulated repetitions of the same stimulus (typically 4)\n",
-      "    • n_channels: Number of EEG channels (typically 64)\n",
+      "    • n_channels: Number of EEG channels (typically 63)\n",
       "    • n_timepoints: Number of time points in the EEG epoch (typically 140)\n",
       "\n",
       "📌 Parameters for encode():\n",
@@ -5303,8 +5299,8 @@
       "📌 Parameters for get_encoding_model():\n",
       "\n",
       "• subject (int, required)\n",
-      "  ↳ Subject ID from the THINGS-EEG-2 dataset (1-4)\n",
-      "  ↳ Valid values: [1, 2, 3, 4]\n",
+      "  ↳ Subject ID from the THINGS-EEG-2 dataset (1-10)\n",
+      "  ↳ Valid values: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
       "  ↳ Example: 1\n",
       "\n",
       "• nest_dir (str, optional)\n",
@@ -5338,10 +5334,9 @@
       "text/plain": [
        "{'model_id': 'eeg_things_eeg_2_vit_b_32',\n",
        " 'model_info': {'modality': 'eeg',\n",
-       "  'dataset': 'things_eeg_2',\n",
-       "  'features': 'vision transformer (ViT-B/32)',\n",
-       "  'repeats': 'multi',\n",
-       "  'subject_specific': True},\n",
+       "  'training_dataset': 'things_eeg_2',\n",
+       "  'model_architecture': 'vision transformer (ViT-B/32)',\n",
+       "  'creator': 'Alessandro Gifford'},\n",
        " 'description': 'This model generates in silico EEG responses to visual stimuli using a vision transformer model.\\nIt was trained on the THINGS-EEG-2 dataset, which contains EEG recordings from subjects viewing\\nimages of everyday objects. The model extracts visual features using a pre-trained ViT-B/32\\ntransformer, applies dimensionality reduction, and then predicts EEG responses across all channels\\nand time points.\\n\\nThe model takes as input a batch of RGB images in the shape [batch_size, 3, height, width], with pixel values ranging from 0 to 255 and square dimensions (e.g., 224×224).\\n',\n",
        " 'input': {'type': 'numpy.ndarray',\n",
        "  'shape': ['batch_size', 3, 'height', 'width'],\n",
@@ -5357,14 +5352,14 @@
        "   {'name': 'n_repetitions',\n",
        "    'description': 'Number of simulated repetitions of the same stimulus (typically 4)'},\n",
        "   {'name': 'n_channels',\n",
-       "    'description': 'Number of EEG channels (typically 64)'},\n",
+       "    'description': 'Number of EEG channels (typically 63)'},\n",
        "   {'name': 'n_timepoints',\n",
        "    'description': 'Number of time points in the EEG epoch (typically 140)'}]},\n",
        " 'parameters': {'subject': {'type': 'int',\n",
        "   'required': True,\n",
-       "   'valid_values': [1, 2, 3, 4],\n",
+       "   'valid_values': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10],\n",
        "   'example': 1,\n",
-       "   'description': 'Subject ID from the THINGS-EEG-2 dataset (1-4)',\n",
+       "   'description': 'Subject ID from the THINGS-EEG-2 dataset (1-10)',\n",
        "   'function': 'get_encoding_model'},\n",
        "  'nest_dir': {'type': 'str',\n",
        "   'required': False,\n",
@@ -5392,9 +5387,9 @@
        "   'function': 'encode'}},\n",
        " 'parameters_by_function': {'get_encoding_model': {'subject': {'type': 'int',\n",
        "    'required': True,\n",
-       "    'valid_values': [1, 2, 3, 4],\n",
+       "    'valid_values': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10],\n",
        "    'example': 1,\n",
-       "    'description': 'Subject ID from the THINGS-EEG-2 dataset (1-4)',\n",
+       "    'description': 'Subject ID from the THINGS-EEG-2 dataset (1-10)',\n",
        "    'function': 'get_encoding_model'},\n",
        "   'nest_dir': {'type': 'str',\n",
        "    'required': False,\n",
